# oxn-fork

./: .gitignore  Evaluation.ipynb  README.md  evaluation.py  forward.ps1  kepler_dashboard.json  setup.cfg  setup.py  values.yaml  values_kepler.yaml  values_kube_prometheus.yaml  values_opentelemetry_demo.yaml
.github/: setup-cluster.yaml
analysis/: Dockerfile  README.md  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.test  curls.txt  db.sqlite3  docker-compose.test.yml  docker-compose.yml  main.py  manage.py  pyproject.toml  readme.md  requirements.tex  requirements.txt  test_main.py
backend/internal/: README.md  docker_orchestration.py  engine.py  errors.py  experiment_manager.py  jaeger.py  kubernetes_orchestrator.py  loadgen.py  locust_file_loadgenerator.py  observer.py  orchestrator.py  pricing.py  prometheus.py  report.py  responses.py  runner.py  settings.py  store.py  treatments.py  utils.py
backend/internal/models/: response.py  treatment.py
backend/locust/: locust_basic_interaction.py  locust_otel_demo.py
backend/oxn_backend/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/oxn_logic/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/oxn_logic/migrations/: 0001_initial.py
backend/scripts/: run_tests.sh
backend/tests/: test_experiment_manager.py
docs/: treatments.md
documentation/: Architecute-building-blocks.drawio
experiments/: OLD_test.yml  big.yml  debug_Experiment_packet_loss.yml  delay-120.yml  delay-90-45.yml  delay-90.yml  delay-treatment.yml  (+12 more)
(+185 files in other folders)
